@@ -4,6 +4,7 @@
 -Added "/mocap recording discard" command.
 -Added support for custom NBT data with "player_as_entity" modifier.
 -Added setting "allow_ghosts" which enables usage of ghost players when using a "player_as_entity" modifier (true by default).
+-Added setting "pretty_scene_files" which makes scene JSON files look pretty (true by default).
 -Settings are now divided into 3 categories - recording, playback and advanced.
 -Merged "/mocap scenes list_elements" into "/mocap scenes list" and "/mocap scenes element_info" into "/mocap scenes info".
 -Removed position offset arguments from "/mocap scenes add_to".
